# qwen35-rtx5080-guide

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GEMINI.md  PROGRESS_CHECKLIST.md  README.md  SECURITY.md  SOCIAL_POSTS.md  ZERO_ERROR_PROTOCOL.md  model_launcher.ps1  opencode.json  pyproject.toml  requirements.txt  server_manager.py  start_chat_server.bat  start_servers_speed.bat
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  gpu_report.md
.github/workflows/: release.yml  test.yml
config/: config_loader.py  servers.yaml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/catalog/: index.ts
dashboard/src/components/dashboard/: CostPanel.tsx  DocsPanel.tsx  MetricsPanel.tsx  ModelInfoPanel.tsx
dashboard/src/data/: mockData.ts
dashboard/src/registry/: index.tsx
dashboard/src/schemas/: costs.ts  docs.ts  metrics.ts  model.ts
dashboard/src/services/: llmApi.ts
dashboard/src/specs/: dashboardSpec.ts
dashboard/src/store/: useAppStore.ts
dashboard/src/types/: index.ts
docs/: PERFORMANCE_MATRIX.md  README.md
results/: BENCHMARK_RESULTS.md  benchmark_35b256k_vs_9b256k_20260307_200226.json  benchmark_35b_128k_vis_final_20260304.json  benchmark_35b_152k_vis_final_20260304.json  benchmark_35b_vs_best9b_20260307_195848.json  benchmark_9b_power_20260307_195552.json  benchmark_port8003_20260304_193218.json  benchmark_port8003_20260304_195811.json  best_models_27b32k_20260307_194413.json
scripts/: start_servers.sh  stop_servers.sh
scripts/windows/: check-release.ps1  download_model.ps1  live_demo.bat  model_launcher.ps1  purge-vram.ps1  quick_benchmark.bat  quick_benchmark.ps1  screenshot_demo.bat  setup-worktrees.ps1  start_chat_server.bat  start_chat_server_lan.bat  worktree-common.ps1
tests/: benchmark_64k_compare.py  benchmark_custom_models.py  benchmark_iq4xs_vision.py  benchmark_vision_models.py  find_max_context_27b.py  test_config_loader.py  test_qwen_agent_local.py  test_server_manager.py
tests/manual/: test_35b_vision.py  test_vision.py
