[project]
name = "qwen-llm"
version = "1.4.0"
description = "Qwen3.5 local LLM configuration and benchmarking toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Qwen-LLM Contributors"}
]
keywords = ["llm", "qwen", "llama-cpp", "local-ai", "benchmarking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/username/qwen-llm"
Repository = "https://github.com/username/qwen-llm"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
